--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.38.0",
+    "aws-sdk": "^2.1014.0",
     "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "save": "^2.4.0",
     "validator": "^13.6.0"
