--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "save": "^2.4.0",
+    "socket.io": "^4.3.1",
     "validator": "^13.6.0"
   },
   "name": "personal_project",
