--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "aws-sdk": "^2.1018.0",
     "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
