--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@aws-sdk/client-s3": "^3.38.0",
+    "@elastic/elasticsearch": "^7.15.0",
+    "@opensearch-project/opensearch": "^1.0.0",
     "aws-sdk": "^2.1018.0",
     "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
@@ -13,6 +15,7 @@
     "mysql2": "^2.3.2",
     "save": "^2.4.0",
     "socket.io": "^4.3.1",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0"
   },
   "name": "personal_project",
