modified index.html and gathering.html

--- a/.gitignore
+++ b/.gitignore
@@ -97,10 +97,16 @@ public/assets/gathering_pic/*
 app_simpletest.js
 
 public/index_2.html
+public/index copy.html
+public/profile copy.html
 piblic/gathering_old.html
 public/styles/home_2.css
-public/styles/home_back_up.css
+public/styles/home_2.css
+public/styles/home copy.css
+public/styles/profile copy.css
 public/styles/gathering_old.css
+
+
 
 editEventTime.js
 
