--- a/.gitignore
+++ b/.gitignore
@@ -123,5 +123,17 @@ es_query_test.js
 es_test.js
 aws_test.js
 
-
+./public/assets/*
+./server/models/redis_test.js
+app_simpletest_2.js
+es_update_test.js
+es_update_test.js
 updateGathering.js
+./新文字文件.txt
+fix_geo.js
+get_geo.js
+get_testdata_2_second_run.js
+get_testdata_2.js
+get_testdata_3_second_run.js
+get_testdata_3.js
+get_testdata.js
