--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ bcrypt==3.2.0
 cffi==1.15.0
 click==8.0.4
 cryptography==36.0.1
+dnspython==2.2.0
+email-validator==1.1.3
 Flask==2.0.3
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+idna==3.3
 itsdangerous==2.1.0
 Jinja2==3.0.3
 MarkupSafe==2.1.0
