--- a/.env_example
+++ b/.env_example
@@ -8,3 +8,13 @@ APPLICATION_DB_CONTAINER=
 
 TOKEN_SECRET=
 TOKEN_EXPIRE=
+
+DEFAULT_POPULARITY=
+DEFAULT_PICTURE=
+
+LIMIT_FOR_SIGNUP_NAME=
+
+S3_BUCKET=
+S3_KEY=
+S3_SECRET=
+S3_LOCATION=
